--- a/data/releases.yml
+++ b/data/releases.yml
@@ -5,3 +5,9 @@ latest:
   url: https://github.com/JetBrains/kotlin/releases/tag/v1.3.30
   runtime_size: 964KB
   date: April 12, 2019
+
+
+tutorials:
+  native:
+    gradle_version: 5.3.1
+
