--- a/data/_nav.yml
+++ b/data/_nav.yml
@@ -336,9 +336,6 @@ tutorials:
       content:
         - url: /docs/tutorials/native/basic-kotlin-native-app.html
           title: Basic Kotlin/Native Application
-#        - url: /docs/tutorials/native/gradle-for-kotlin-native.html
-#          title: Gradle for Kotlin/Native
-#          TODO: include Gradle + Kotlin/Native library tutorial
         - url: /docs/tutorials/native/targeting-multiple-platforms.html
           title: Targeting Multiple Platforms
         - url: /docs/tutorials/native/mapping-primitive-data-types-from-c.html
@@ -349,18 +346,16 @@ tutorials:
           title: Mapping Function Pointers from C
         - url: /docs/tutorials/native/mapping-strings-from-c.html
           title: Mapping Strings from C
-        - url: /docs/tutorials/native/interop-with-c.html
-          title: Interop with C Libraries
         - url: /docs/tutorials/native/dynamic-libraries.html
           title: Kotlin/Native as a Dynamic Library
         - url: /docs/tutorials/native/apple-framework.html
           title: Kotlin/Native as an Apple Framework
-        - url: /docs/tutorials/native/working-with-klib.html
-          title: Working with Kotlin/Native Libraries
-#        - url: /docs/tutorials/native/kotlin-native-with-clion.html
-#          title: Kotlin/Native with CLion
+        - url: /docs/tutorials/multiplatform-library.html
+          title: Publishing a Kotlin/Native Library
+        - url: /docs/tutorials/native/curl.html
+          title: "Using C Interop and libcurl for an App"
         - url: /docs/tutorials/native/mpp-ios-android.html
-          title: "Multiplatform Project: iOS and Android"
+          title: "Building iOS and Android App"
 
     - title: Coroutines
       content:
